# preware

./: .gitignore  .project  CMakeLists.txt  README  README.md  appinfo.json  build.cmd  build.sh  debug.html  framework_config.json  index.html  org.webosinternals.ipkgservice  org.webosinternals.preware2_0.0.1_all.ipk  sources.json  version-compare.js  version-compare.txt
api/assets/: manifest.json
app/assistants/: app-assistant.js  app-categories-assistant.js  app-groups-assistant.js  app-list-assistant.js  app-view-assistant.js  configs-assistant.js  file-picker-assistant.js  folder-picker-assistant.js  help-assistant.js  help-data-assistant.js  ipkg-log-assistant.js  luna-assistant.js  main-assistant.js  (+11 more)
control/: postinst  prerm
dbus/: org.webosinternals.ipkgservice.json  org.webosinternals.ipkgservice.service
enyo2/: build_debug.cmd  debug.html  framework_config.json  index.html  org.webosinternals.preware2_0.0.1_all.ipk
images/: Thumbs.db
keys/: readme.md
mojo/: Makefile  appinfo.json  pmPreRemove.script
source/: App.css  App.js  AppPanels.js  EmptyPanel.js  FeedListItem.js  GrabberToolbar.js  ListItem.js  Makefile  ManageFeedsDialog.js  PackageManagement.js  PkgItem.js  PkgList.js  SettingsDialog.js  Theme.less  Toast.js  Tweet.js  UpdateFeeds.js  appinfo.json  package.js  pmPostInstall.script
src/: Makefile  ipkgservice.c  ipkgservice.h  luna_methods.c  luna_methods.h  luna_service.c
stylesheets/: preware-device.css  preware.css  theme-appcat.css
tools-extra/: build.cmd  build_debug.cmd
upstart/: org.webosinternals.ipkgservice
(+328 files in other folders)
